--- a/netologi.web/netologi.web/.github/workflows/gradle.yml
+++ b/netologi.web/netologi.web/.github/workflows/gradle.yml
@@ -19,22 +19,14 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: Start SUT
-        run: java -jar ./artifacts/app-order.jar &
-        continue-on-error: true
-
-      - name: Wait for SUT to start
-        run: sleep 10
-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Start SUT
+        run: java -jar ./artifacts/app-order.jar &
+
+      - name: Build with Gradle
+        run: ./gradlew build
+
       - name: Run tests
         run: ./gradlew test
-
-      - name: Publish Test Report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-report
-          path: build/reports/tests/
